--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wealapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.6.0",
+    "lucide-react": "^0.501.0",
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "next": "15.3.0",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
