--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "slugify": "^1.6.6",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
