--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "slugify": "^1.6.6",
     "tailwindcss-textshadow": "^2.1.3"
   },
