--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
