--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "slugify": "^1.6.6",
+    "sslcommerz-lts": "^1.1.0",
     "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
