--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.2",
     "next": "15.3.0",
     "next-cloudinary": "^6.16.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
