--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
