--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
