--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
-    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
