--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.15.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
