--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
     "@react-pdf/renderer": "^4.3.0",
     "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.15.0",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.501.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "node-fetch": "^2.7.0",
     "react": "^19.0.0",
