--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-select": "^5.10.1",
     "slugify": "^1.6.6",
     "sslcommerz-lts": "^1.1.0",
-    "tailwindcss-textshadow": "^2.1.3"
+    "tailwindcss-textshadow": "^2.1.3",
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
